--- a/README
+++ b/README
@@ -14,7 +14,7 @@ HOLA PEDRO
 
 ARMANDO ALIAGA
 
-SEBASTIAN GERARD
+SEBASTIAN GERARD pregunta: ¿Cual es la tarea? ya use branch y ¿ahora?
 
 jorge valdivia estuvo aqui otra vez
 
