--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Proyecto de prueba
 
-HOLA PEDRO
+HOLA PEDRO1
+Nueva linea
 
 Paolo Fernandez (usando branch)
 
@@ -14,7 +15,7 @@ HOLA PEDRO
 
 ARMANDO ALIAGA
 
-SEBASTIAN GERARD pregunta: ¿Cual es la tarea? ya use branch y ¿ahora?
+SEBASTIAN GERARD pregunta: ï¿½Cual es la tarea? ya use branch y ï¿½ahora?
 
 jorge valdivia estuvo aqui otra vez
 
@@ -23,4 +24,3 @@ Adrian Molina
 Ariel Garcia
 
 Gary Antoriano
-
