modificacion en rama2

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ nueva linea2
 
 Paolo Fernandez (usando branch)
 
-Andrea Quiroga Modifica en RAMA1
+Andrea Quiroga Modifica en RAMA1 y RAMA2
 
 Proyecto de prueba
 
